hero image section not showing problem solved

--- a/Styles/web.css
+++ b/Styles/web.css
@@ -132,7 +132,7 @@
        /* hero section */
 
        .hero-banner{
-        background-image: url(/assets/hero-bg.png);
+        background-image: url(../assets/hero-bg.png);
         background-size: cover;
         background-position: center;
         /* background-size: contain; */
@@ -153,7 +153,7 @@
           /* border: 1px solid red; */
          width: 350px;
          margin: 0 auto;
-         background-image: url(/assets/hero-circle.png);
+         background-image: url(../assets/hero-circle.png);
          background-size: cover;
          height: 350px;
          display: flex;
@@ -233,6 +233,42 @@
       }
 
         .star{font-size: 1.5rem;}
+
+
+
+/* Main part 3 */
+
+   .featured-container{
+    border: 1px solid red;
+    width: 1200px;
+    margin: 0 auto;
+   }
+
+   .featured-title{
+    text-align: center;
+    margin-bottom: 40px;
+   }
+
+   .featured-cards{
+    display: flex;
+   }
+
+
+   .f-card{ border: 1px solid yellow;
+    width: 380px;
+    background-color: #250d44;
+    padding: 24px;
+   }
+
+   .card-paragraph{ margin-top: 12px;
+  margin-bottom: 12px;}
+
+   .card-timer{
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 24px;
+    color: #00FF88;
+   }
 
 
 
